[tool.poetry]
name = "bolt_control_flow"
version = "0.3.0"
description = "Utilities and helpers for overriding control flow behaviour in Bolt"
authors = ["Stefan van der Velden <vdvman1@users.noreply.github.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://vdvman1.github.io/bolt-control-flow/"
repository = "https://github.com/vdvman1/bolt-control-flow"
documentation = "https://vdvman1.github.io/bolt-control-flow/"

keywords = ["beet", "bolt", "minecraft", "minecraft-commands", "mcfunction"]

include = ["bolt_control_flow/py.typed"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vdvman1/bolt-control-flow/issues"

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.97.0"
mecha = ">=0.83.0"
bolt = ">=0.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
pytest-insta = "^0.1.11"
lectern = ">=0.25.0"
python-semantic-release = "^7.32.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-pyproject = "^0.3.0"
furo = "^2024.1.29"
sphinx-autoapi = "^3.0.0"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "bolt_control_flow/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
upload_to_repository = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
