[project]
authors = [{name = "Stefan van der Velden", email = "vdvman1@users.noreply.github.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "beet>=0.113.0",
  "mecha>=0.102.0",
  "bolt>=0.50.0",
]
description = "Utilities and helpers for overriding control flow behaviour in Bolt"
keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
]
license = "MIT"
name = "bolt_control_flow"
readme = "README.md"
requires-python = ">=3.14,<4"
version = "0.4.0"

[project.urls]
"Bug Tracker" = "https://github.com/vdvman1/bolt-control-flow/issues"
Documentation = "https://vdvman1.github.io/bolt-control-flow/"
Homepage = "https://vdvman1.github.io/bolt-control-flow/"
Repository = "https://github.com/vdvman1/bolt-control-flow"

[dependency-groups]
dev = [
  "pytest>=7.1.3,<8",
  "pytest-insta>=0.1.11,<0.2",
  "lectern>=0.25.0",
  "python-semantic-release>=9.21.0",
  "ruff>=0.14.13",
]
docs = [
  "sphinx>=7.2.6,<8",
  "sphinx-pyproject>=0.3.0,<0.4",
  "furo>=2024.1.29,<2025",
  "sphinx-autoapi>=3.0.0,<4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""
source-include = ["bolt_control_flow/py.typed"]

[tool.ruff.lint]
ignore = ["F403", "F405"] # allows "*" imports

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26,<0.10.0"]

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.semantic_release]
build_command = "uv build"
major_on_zero = false

commit_author = "github-actions <action@github.com>"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["bolt_control_flow/__init__.py:__version__"]
